qod/deployment_api.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: qod-api
  labels:
    app: qod-api
    tier: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qod-api
  template:
    metadata:
      labels:
        app: qod-api
    spec:
      containers:
        - name: qod-api
          image: quay.io/langley_millard_ibm/qod-api
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
      restartPolicy: Always
