qod/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: qod
  namespace: sample-app
spec:
  path: /
  to:
    kind: Service
    name: qod-web
  port:
    targetPort: http
